Edit typos in index and rasp, add teq

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="rasp-infu-vod.html">Raspberry-Infused Vodka</a>
-    
+    <a href="recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
+    <a href="recipes/teq-sunrise.html">Tequila Sunrise</a>
 
 
     <p>These recipes and images were taken from <a href="https://www.allrecipes.com">www.allrecipes.com</a></p>
