--- a/recipes/rasp-infu-vod.html
+++ b/recipes/rasp-infu-vod.html
@@ -14,6 +14,7 @@
         <li>4 1/2 cups of white sugar</li>
         <li> 4 cups of water</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Combine vodka, raspberries, sugar, and water in a large, non-metallic container. </li>
         <li>Press and muddle raspberries until incorporated into the mixture. </li>
