Add whiskey recipe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
     <a href="recipes/teq-sunrise.html">Tequila Sunrise</a>
-
+    <a href="recipes/lemon-whisk.html">Lemon Whiskey Slush</a>
 
     <p>These recipes and images were taken from <a href="https://www.allrecipes.com">www.allrecipes.com</a></p>
 </body>
