Add title to index

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <title>Cocktail reciples!</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
-    <a href="recipes/teq-sunrise.html">Tequila Sunrise</a>
-    <a href="recipes/lemon-whisk.html">Lemon Whiskey Slush</a>
+    <h1>Cocktail Recipes for a hot day or hot night >.<</h1>
+    <a href="./recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
+    <a href="./recipes/teq-sunrise.html">Tequila Sunrise</a>
+    <a href="./recipes/lemon-whisk.html">Lemon Whiskey Slush</a>
 
     <p>These recipes and images were taken from <a href="https://www.allrecipes.com">www.allrecipes.com</a></p>
 </body>
