Edit typo for img on index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Cocktail Recipes for a hot day or hot night >.<</h1>
-    <a href="https://cf.ltkcdn.net/cocktails/images/orig/200804-2121x1414-cocktails.jpg" alt="cocktails"></a>
+    <img src="https://cf.ltkcdn.net/cocktails/images/orig/200804-2121x1414-cocktails.jpg" alt="cocktails"></a>
     <a href="./recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
     <a href="./recipes/teq-sunrise.html">Tequila Sunrise</a>
     <a href="./recipes/lemon-whisk.html">Lemon Whiskey Slush</a>
