--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
     <h1>Cocktail Recipes for a hot day or hot night >.<</h1>
     <img src="https://cf.ltkcdn.net/cocktails/images/orig/200804-2121x1414-cocktails.jpg" alt="cocktails"></a>
-    <a href="./recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a>
-    <a href="./recipes/teq-sunrise.html">Tequila Sunrise</a>
-    <a href="./recipes/lemon-whisk.html">Lemon Whiskey Slush</a>
-
+    <ul>
+        <li><a href="./recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a></li>
+        <li><a href="./recipes/teq-sunrise.html">Tequila Sunrise</a></li>
+        <li><a href="./recipes/lemon-whisk.html">Lemon Whiskey Slush</a></li>
+    </ul>
     <p>These recipes and images were taken from <a href="https://www.allrecipes.com">www.allrecipes.com</a></p>
 </body>
 </html>
