Change size of image on index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Cocktail Recipes for a hot day or hot night >.<</h1>
-    <img src="https://cf.ltkcdn.net/cocktails/images/orig/200804-2121x1414-cocktails.jpg" alt="cocktails"></a>
+    <img src="https://cf.ltkcdn.net/cocktails/images/orig/200804-2121x1414-cocktails.jpg" alt="cocktails" width="500" height="600"></a>
     <ul>
         <li><a href="./recipes/rasp-infu-vod.html">Raspberry-Infused Vodka</a></li>
         <li><a href="./recipes/teq-sunrise.html">Tequila Sunrise</a></li>
