--- a/recipes/lemon-whisk.html
+++ b/recipes/lemon-whisk.html
@@ -16,7 +16,7 @@
         <li>4 cups of ice cubes</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
         <li>Place all of the ingrdients into a blender.</li>
         <li>Blend and pour into a glass.</li>
         <li>Enjoy!</li>
