--- a/recipes/rasp-infu-vod.html
+++ b/recipes/rasp-infu-vod.html
@@ -16,7 +16,7 @@
         <li> 4 cups of water</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
         <li>Combine vodka, raspberries, sugar, and water in a large, non-metallic container. </li>
         <li>Press and muddle raspberries until incorporated into the mixture. </li>
         <li>Allow mixture to sit, stirring for 10 to 15 minutes each day, for 5 to 6 days.</li>
