--- a/recipes/teq-sunrise.html
+++ b/recipes/teq-sunrise.html
@@ -18,7 +18,7 @@
         <li>1 maraschino cherry for garnish</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
         <li>Stir orange juice and tequila together. Fill a chilled 12-ounce glass with ice cubes; pour in orange juice mixture.</li>
         <li>Slowly pour in the grenadine, and allow it to settle to the bottom of the glass (be patient).</li>
         <li>Garnish with a slice of orange and a maraschino cherry.</li>
