Size photos and change color of ul

--- a/recipes/teq-sunrise.html
+++ b/recipes/teq-sunrise.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Tequila Sunrise</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4478735.jpg&w=596&h=596&c=sc&poi=face&q=60" alt="Tequila Sunrise in a glass">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4478735.jpg&w=596&h=596&c=sc&poi=face&q=60" alt="Tequila Sunrise in a glass" width="100px" height="150px">
     <p>This recipe makes a delicious citrus cocktail. You only need a few ingredients but it's lit.</p>
     <h2>Ingredients</h2>
     <ul>
