--- a/recipes/rasp-infu-vod.html
+++ b/recipes/rasp-infu-vod.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Raspberry-Infused Vodka</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4479660.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Raspberry infused vodka in a bottle">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4479660.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Raspberry infused vodka in a bottle" width="100px" height="150px">
     <p>This recipe is for a raspberry-infused vodka. It is very simple but delicious</p>
     <h2>Ingredients</h2>
     <ul>
